--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -8,6 +8,7 @@
   pointer-events: none;
 }
 
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -49,7 +50,7 @@
 }
 
 
-/* BookList Styles */
+/* BookList Styles 
 .list {
   display: grid;
   margin: 20px 0 50px 0;
@@ -85,3 +86,4 @@
   font-size: 1em;
   padding: 10px 0 10px 0;
 }
+*/
