--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -8,7 +8,6 @@
   pointer-events: none;
 }
 
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -33,14 +32,25 @@
   }
 }
 
-.CreateUser {
+.CreateFlight {
   background-color: #2c3e50;
   min-height: 100vh;
   color: white;
 }
 
+.showFlightDetails {
+  background-color: #2c3e50;
+  min-height: 100vh;
+  color: white;
+}
 
-.CreateFlight {
+.UpdateFlightInfo {
+  background-color: #2c3e50;
+  min-height: 100vh;
+  color: white;
+}
+
+.ShowFlightList {
   background-color: #2c3e50;
   height: 100%;
   width: 100%;
@@ -50,7 +60,6 @@
 }
 
 
-/* BookList Styles 
 .list {
   display: grid;
   margin: 20px 0 50px 0;
@@ -86,4 +95,3 @@
   font-size: 1em;
   padding: 10px 0 10px 0;
 }
-*/
