--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -69,7 +69,7 @@
 }
 
 .card-container {
-  width: 250px;
+  width: 300px;
   border: 1px solid rgba(0,0,.125);
   margin: 0 auto;
   border-radius: 5px;
@@ -77,7 +77,7 @@
 }
 
 .desc {
-  height: 130px;
+  height: 500px;
   padding: 10px;
 }
 
@@ -86,12 +86,15 @@
   font-weight: 400;
 }
 
-.desc h3, p {
-  font-weight: 300;
-}
-
 .desc h3 {
-  color: #6c757d;
+  color:white;
   font-size: 1em;
   padding: 10px 0 10px 0;
+}
+
+.visually-hidden {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
