--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -37,6 +37,11 @@
   min-height: 100vh;
   color: white;
 }
+.SearchFlight{
+  background-color: #2c3e50;
+  min-height: 100vh;
+  color: white;
+}
 
 .showFlightDetails {
   background-color: #2c3e50;
