--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -33,36 +33,57 @@
 }
 
 .CreateFlight {
-  background-color: #2c3e50;
+  background-color: #0B243A;
   min-height: 100vh;
   color: white;
 }
 .SearchFlight{
-  background-color: #2c3e50;
+  background-color: #0B243A;
   min-height: 100vh;
   color: white;
 }
 
 .showFlightDetails {
-  background-color: #2c3e50;
+  background-color: #0B243A;
   min-height: 100vh;
   color: white;
 }
 
 .UpdateFlightInfo {
-  background-color: #2c3e50;
+  background-color: #0B243A;
   min-height: 100vh;
   color: white;
 }
 
 .ShowFlightList {
-  background-color: #2c3e50;
+  background-color: #0B243A;
   height: 100%;
   width: 100%;
   min-height: 100vh;
   min-width: 100px;
   color: white;
 }
+
+.Login {
+  background-color: #0B243A;
+  height: 100%;
+  width: 100%;
+  min-height: 100vh;
+  min-width: 100px;
+  color: white;
+}
+
+.adminhome {
+  background-color: #0B243A;
+  height: 100%;
+  width: 100%;
+  min-height: 100vh;
+  min-width: 100px;
+  color: #ffffff;
+}
+
+
+           
 
 
 .list {
@@ -81,9 +102,10 @@
   overflow: hidden;
 }
 
-.desc {
+.desc h1{
   height: 500px;
   padding: 10px;
+  margin: 0 auto;
 }
 
 .desc h2 {
