--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -30,6 +31,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.HomePage{
+  background-color: #0B243A;
+  min-height: 100vh;
+  color: white;
 }
 
 .CreateFlight {
