--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -109,6 +109,14 @@
   overflow: hidden;
 }
 
+.card-container2 {
+  width: 300px;
+  border: 1px solid rgba(0,0,.125);
+  margin: 0 auto;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
 .desc h1{
   height: 500px;
   padding: 10px;
